# batteur-android

./: .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/cc/ferrand/batteur/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/drums/: Brush.sfz  Electronic.sfz  Jazz.sfz  Power.sfz  Room.sfz  Standard.sfz  TR-808.sfz
app/src/main/cpp/: CMakeLists.txt  SoundEngine.cpp  SoundEngine.h  native-lib.cpp
app/src/main/java/cc/ferrand/batteur/: MainActivity.kt  MainViewModel.kt  MidiListener.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cc/ferrand/batteur/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
